<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/main_bottom_nav_home"
        android:id="@+id/main_bottom_nav_home"
        android:enabled="true"
        android:icon="@drawable/home_48px"
        android:iconTint="@color/black"
        />

    <item
        android:title="@string/main_bottom_nav_activity"
        android:id="@+id/main_bottom_nav_activity"
        android:enabled="true"
        android:icon="@drawable/activity"
        android:iconTint="@color/black" />

    <item
        android:title="@string/main_bottom_nav_notification"
        android:id="@+id/main_bottom_nav_notification"
        android:enabled="true"
        android:icon="@drawable/notifications_48px"
        android:iconTint="@color/black"
        />

    <item
        android:title="@string/main_bottom_nav_account"
        android:id="@+id/main_bottom_nav_account"
        android:enabled="true"
        android:icon="@drawable/person_48px"
        android:iconTint="@color/black"
        />

</menu>