<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".activities.signup.Signup"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/title_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp" >
        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo_image"
            android:contentDescription="Logo"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="EASY         BOOKING"
            android:textStyle="bold"
            android:fontFamily="@font/gruppo_regular"
            android:textSize="32sp"
            android:textColor="@color/black"
            android:padding="20dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <!-- App Name -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toTopOf="@+id/logo_image"
            app:layout_constraintStart_toStartOf="@+id/logo_image"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_field"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>
    <!-- Email Input Layout -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toTopOf="@+id/logo_image"
        app:layout_constraintStart_toStartOf="@+id/logo_image"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_field"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password Input Layout -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/email_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_field"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Phone Input Layout -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/password_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number_field"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Sign Up Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/signup_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_button"
        app:layout_constraintTop_toBottomOf="@id/phone_input_layout" />

    <!-- Already Have an Account Link -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/goto_login_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_goto_login_link"
        app:layout_constraintTop_toBottomOf="@id/signup_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_gravity="center_horizontal"/>
    </LinearLayout>

</LinearLayout>
